fix spacing

--- a/css/style.css
+++ b/css/style.css
@@ -179,7 +179,7 @@ i.fa {
     letter-spacing: 0.75px;
     font-size: calc(0.3rem + 1vw);
     vertical-align: middle;
-    padding-top: 35px;
+    padding-top: 40px;
     padding-right: 5px;
 
 }
@@ -191,7 +191,7 @@ i.fa {
     letter-spacing: 1px;
     font-size: calc(0.3rem + 1vw);
     vertical-align: middle;
-    padding-top: 35px;
+    padding-top: 40px;
 
 }
 
